--- a/builds/vs2010/QSanguosha.vcxproj.filters
+++ b/builds/vs2010/QSanguosha.vcxproj.filters
@@ -60,6 +60,11 @@
     <Filter Include="Form Files">
       <UniqueIdentifier>{c1f0d23e-0665-4100-990b-a5a0d4709b14}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files">
+      <UniqueIdentifier>{D9D6E242-F8AF-46E4-B9FD-80ECBC20BA3E}</UniqueIdentifier>
+      <Extensions>qrc;*</Extensions>
+      <ParseFiles>false</ParseFiles>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\swig\sanguosha_wrap.cxx">
@@ -981,6 +986,9 @@
     <ClCompile Include="..\..\src\core\json.cpp">
       <Filter>core</Filter>
     </ClCompile>
+    <ClCompile Include="GeneratedFiles\qrc_fool.cpp">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\src\server\ai.h">
@@ -1292,6 +1300,9 @@
     <CustomBuild Include="..\..\src\dialog\banipdialog.h">
       <Filter>dialog</Filter>
     </CustomBuild>
+    <CustomBuild Include="..\..\fool.qrc">
+      <Filter>Resource Files</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\resource\icon.rc" />
@@ -1378,6 +1389,15 @@
   <ItemGroup>
     <None Include="..\sanguosha.ts">
       <Filter>Translation Files</Filter>
+    </None>
+    <None Include="..\..\avatar.png">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\..\card.png">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\..\full.png">
+      <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
 </Project>
